// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Empty > renders with actions correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with actions slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class="">Actions slot</div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`Empty > renders with avatar correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with body slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">Body slot</div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with class correctly 1`] = `
"<div data-slot="root" class="gap-6">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description slot</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with footer slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <div data-slot="footer" class="">Footer slot</div>
</div>"
`;

exports[`Empty > renders with header slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">Header slot</div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with icon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with leading slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">Leading slot<h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with primary variant naked correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with primary variant solid correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with size lg correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with size md correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with size sm correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with size xl correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with size xs correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with title correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with title slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title slot</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Empty > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
    <h2 data-slot="title" class="">Title</h2>
    <div data-slot="description" class="">Description</div>
  </div>
  <div data-slot="body" class="">
    <div data-slot="actions" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">Add</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;
